express/styles/styles.css
/* ... */
main .block .button-container.free-plan-container.highlight-optout .free-plan-bullet-container,
main .block .button-container.free-plan-container.highlight-optout .free-plan-bullet-tray {
  transition: none;
}

main .block .button-container.free-plan-container .free-plan-bullet .free-plan-bullet-tray {
  width: max-content;
  height: 100%;
  display: flex;
  align-items: center;
  gap: 20px;
  transition: transform 0.2s linear;
  animation-name: freePlanHighlight;
  animation-timing-function: linear;
  animation-duration: 80s;
  animation-iteration-count: infinite;
}

main .block .button-container.free-plan-container .free-plan-bullet .free-plan-bullet-tray > div > div:first-child {
  position: relative;
  margin-top: 5px;
  margin-right: 6px;
  width: 14px;
  height: 14px;
  background: #33AB84;
  border-radius: 50%;
}

main .block .button-container.free-plan-container .free-plan-bullet .free-plan-bullet-tray .free-plan-tag {
  display: flex;
  font-size: 16px;
}

main .block .free-plan-optout {
  appearance: none;
  display: none;
  border: none;
  border-radius: 100px;
  position: absolute;
  top: 50%;
  left: 8px;
  transform: translateY(-50%);
  height: 45px;
  width: 45px;
  align-items: center;
  justify-content: center;
  transition: left 0.1s ease-in, transform 0.1s ease-in;
  cursor: pointer;
  background: var(--color-gray-200);
  z-index: 1;
}

main .block .button-container.free-plan-container .free-plan-optout .icon {
  margin: 0;
}

main .block .button-container.free-plan-container::before {
  content: '';
  height: 100%;
  max-height: 0;
  left: 0;
  width: 80px;
  position: absolute;
  transition: max-height 0.2s ease-in, left 0.2s ease-in;
  z-index: 2;
}

main .block .button-container.free-plan-container .free-plan-optout img {
  height: 16px;
  width: 16px;
  padding: 12px;
}

@media (min-width: 900px) {
  main .block .button-container.free-plan-container .free-plan-widget {
    display: none;
  }

  main .block .button-container.free-plan-container .free-plan-bullet {
    display: inline-block;
  }

  main .block .button-container.free-plan-container {
    width: max-content;
  }

  main .block.fullscreen-marquee .button-container.free-plan-container {
    width: 400px;
    align-items: flex-start;
  }

  main .block .button-container.free-plan-container .free-plan-optout {
    display: flex;
  }

  main .block .free-plan-bullet .free-plan-bullet-container,
  main .block .free-plan-widget-placeholder {
    max-width: 375px;
  }

  main .block .button-container.free-plan-container a.button {
    margin: 0;
    display: flex;
    align-items: center;
    z-index: 4;
  }
}

@media (min-width: 1200px) {
  main .block .button-container.free-plan-container {
    flex-direction: row;
    width: 400px;
    justify-content: left;
  }

  main .block.center .button-container.free-plan-container {
    justify-content: unset;
    margin: 40px auto 0 auto;
  }

  main .block .free-plan-widget {
    margin: 0 auto;
  }

  main .block .button-container.free-plan-container a.button {
    margin-right: 24px;
  }

  main .block .button-container.free-plan-container .free-plan-widget {
    margin: 0;
  }

  main .block .button-container.free-plan-container.stacked {
    margin-top: 0;
    flex-wrap: wrap;
  }

  main .block .button-container.free-plan-container.stacked .free-plan-widget {
    margin-top: 24px;
    flex-direction: row;
  }

  main .block .button-container.free-plan-container.stacked .free-plan-widget > div {
    margin-right: 16px;
  }

  main .template-list-fourcols-container>div,
  main .template-list-horizontal-container>div {
    max-width: 1200px;
  }

  main .columns-fullsize-container>div,
  main .columns-fullsize-center-container>div,
  main .template-list-sixcols-container>div {
    max-width: 1122px;
  }

  main .block .free-plan-bullet .free-plan-bullet-container,
  main .block .free-plan-widget-placeholder {
    max-width: 400px;
  }
}

main .template-list-sixcols-container>div {
  padding: 0;
}

@-webkit-keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

@-moz-keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

@keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

/* disable budoux on small screens  */
@media (max-width: 600px) {
  h1.budoux,
  h2.budoux,
  h3.budoux,
  h4.budoux,
  h5.budoux {
    word-break: normal !important;
  }
}

/* Store icons */
img.icon-apple-store,
img.icon-google-store,
img.icon-galaxy-store,
img.icon-microsoft-store {
  height: 70px;
  width: auto;
  margin: 8px;
}

/* Lottie player default */
.lottie {
  width: 32px;
  height: 32px;
}

/* hide promotion block until loaded */
main .promotion {
  display: none;
}

/* hide floating button before css loads */
main .floating-button-wrapper,
main .floating-button {
  position: fixed;
  display: none;
}

/* hide the .section that ONLY has the floating-button block */
/* (removes the extra whitespace from padding) */
[class=".section floating-button-container"] {
  display: none;
}

/* Japanese heading balanced word wrap styles */
wbr.wbr-off {
  display: none;
}

/* progressive section appearance */
main .section[data-section-status='loading'],
main .section[data-section-status='initialized'] {
  display: none;
}

/* Japanese font sizing styles */
:lang(ja) main h1.heading-long {
  font-size: var(--heading-font-size-xl);
}

:lang(ja) main h1.heading-very-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h1.heading-x-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h2.heading-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h2.heading-very-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h2.heading-x-long {
  font-size: var(--heading-font-size-m);
}
/* ... */

